# chatterbox-multilingual-finetuning

./: .gitignore  pyproject.toml
src/: finetune_s3gen.py  finetune_t3.py  transformers_wandb_patch.py
src/chatterbox/: mtl_tts.py  tts.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py
