[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatterbox-tts"
version = "0.1.6"
description = "Local multilingual Chatterbox fork used by chatterbox-ar-tts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "gradio==5.44.1",
    "librosa==0.11.0",
    "numpy>=1.24.0,<1.26.0",
    "omegaconf",
    "pykakasi==2.3.0",
    "pyloudnorm",
    "resemble-perth==1.0.1",
    "s3tokenizer",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.46.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chatterbox*"]
